# totton-rasp-gpu-dsp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.dev  GEMINI.md  INSTALL.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/agents/: code-reviewer.md
.claude/hooks/: hooks.json
.claude/hooks/scripts/post-tooluse/: cpp-format.sh  pr-auto-log.sh  python-format.sh
.claude/hooks/scripts/pre-tooluse/: doc-file-restriction.sh  git-push-review.sh  long-running-reminder.sh
.claude/hooks/scripts/stop/: final-audit.sh
.claude/rules/: git-workflow.md  security.md
.github/workflows/: arm64-release.yml  docker-publish.yml
data/coefficients/: README.md  filter_44k_16x_80000_min_phase.json  filter_44k_2x_80000_min_phase.json  filter_44k_4x_80000_min_phase.json  filter_44k_8x_80000_min_phase.json  filter_48k_16x_80000_min_phase.json  filter_48k_2x_80000_min_phase.json  filter_48k_4x_80000_min_phase.json  filter_48k_8x_80000_min_phase.json
docker/: docker-compose.test.yml  entrypoint.sh  setup-alsa-loopback.sh
docs/: filter_format.md
include/alsa/: alsa_common.h  alsa_filter_selector.h
include/audio/: audio_types.h  auto_negotiation.h  eq_parser.h  eq_to_fir.h  pcm_format_set.h
include/io/: audio_ring_buffer.h  dac_capability.h
include/vulkan/: vulkan_streaming_upsampler.h
include/zmq/: command_server.h
release/: START_HERE.md  config.example.json
scripts/: __init__.py  modern_target.py
scripts/deployment/: run_tests.sh
scripts/filters/: generate_filter.py  generate_linear_phase.py  generate_minimum_phase.py
scripts/integration/: __init__.py  opra.py
scripts/test/: alsa_loopback_helper.py  convert_audio.py  e2e_docker_test.sh  e2e_local_file_test.sh  generate_test_audio.py  validate_output.py
src/alsa/: alsa_common.cpp  alsa_common.h  alsa_filter_selector.cpp  alsa_filter_selector.h  alsa_streamer.cpp  alsa_streamer_main.cpp
src/audio/: auto_negotiation.cpp  eq_parser.cpp  eq_to_fir.cpp
src/io/: dac_capability.cpp
src/vulkan/: fft_utils.h  vulkan_streaming_upsampler.cpp
src/zmq/: command_server.cpp  zmq_server_main.cpp
tests/cpp/: test_alsa_common.cpp  test_alsa_filter_selector.cpp  test_alsa_streamer_e2e.cpp  test_eq_parser_smoke.cpp  test_eq_to_fir_smoke.cpp  test_vulkan_upsampler.cpp  test_zmq_server_e2e.cpp
tests/cpp/audio/: test_audio_ring_buffer.cpp  test_auto_negotiation.cpp
tests/python/: conftest.py  test_alsa_config_endpoints.py  test_api_endpoints.py  test_generate_filter.py  test_opra_sync_router.py  test_status_service.py  test_ui_templates.py
web/: __init__.py  constants.py  i18n.py  main.py  models.py
web/routers/: __init__.py  alsa.py  config.py  daemon.py  eq.py  opra.py  opra_sync.py  status.py  ui.py
web/services/: __init__.py  config.py  daemon.py  daemon_client.py  docker_control.py  eq.py  modern_target.py
web/static/: app.css
web/templates/: layout.html
web/templates/components/: forms.html  opra_search.html
web/templates/pages/: eq_settings.html  settings.html
